--- a/meme-gen/src/style/App.css
+++ b/meme-gen/src/style/App.css
@@ -31,18 +31,23 @@
 
 form{
   display: grid;
-  grid-template-columns: 1fr 1fr ;
+  grid-template-columns: repeat(2,1fr);
   margin: 1rem;
 }
 
 form .inputs{
   margin: 1rem;
   height: 2.5rem;
-  font-size: 25px;
+  font-size: 18px;
   border: none;
   outline: none;
   border-radius: 7px;
   padding: 0 7px;
+}
+
+::placeholder{
+  color: grey;
+  font-size: 20px;
 }
 
 .btns {
@@ -51,7 +56,7 @@ form .inputs{
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 20px;
   color: #fff;
-  width: 70%;
+  width: 50%;
   height: 45px;
 }
 
@@ -74,8 +79,42 @@ form .inputs{
   margin: 9px auto;
   border: 1px solid rgb(5, 134, 189);
   width: 29rem;
+  position: relative;
 }
 
 .meme-image img{
   width: 100%;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 1.8em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow:
+    2px 2px 0 #000,
+    -2px -2px 0 #000,
+    2px -2px 0 #000,
+    -2px 2px 0 #000,
+    0 2px 0 #000,
+    2px 0 0 #000,
+    0 -2px 0 #000,
+    -2px 0 0 #000,
+    2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
